changed logo into text

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,6 +1,12 @@
 <div class='banner'>
   <div class="logo">
     <img src='/assets/enp-banner-logo.svg' />
+    <div class='logo__text'>
+      <div>the</div>
+      <div class='logo__ninja'>Episode Ninja</div>
+      <div>Podcast</div>
+
+    </div>
   </div>
   <div class="description">
     <div class="description__episode">
